--- a/css/component/reset.css
+++ b/css/component/reset.css
@@ -18,9 +18,11 @@ a {
   text-decoration:none;
   cursor: pointer;
 }
-a:hover { text-decoration: none!important;}
-a:visited { text-decoration: none!important;}
-a:link { text-decoration: none!important;}
+a:hover { text-decoration: none;}
+a:visited { text-decoration: none;}
+a:link { text-decoration: none;}
+a:active { text-decoration: none;}
+a:focus { text-decoration: none;}
 img { 
   border: none; 
   vertical-align: top;
