--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -1,8 +1,11 @@
-/*顶部导航*/
+@charset "UTF-8";
+@import "base";
+
+//顶部导航
 .nav-top {
     width: 100%;
     height: 32px;
-    background: #000;
+    background: #262626;
     border-radius: 0;
     font-size: 12px;
     color: #747474;
@@ -10,12 +13,7 @@
     border: none;
     margin-bottom: 0;
 }
-.nav-topMain { 
-    max-width: 1140px;
-    min-width: 480px;
-    height: 32px;
-    margin: 0 auto;
-}
+.nav-topMain { height: 32px;}
 .nav-topRight li {
     float: left;
     margin: 9px 0;
@@ -28,10 +26,7 @@
     line-height: 14px;
     font-size: 12px;
     color: #747474;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    transition: all .3s;
+    @include transition;
 }
 .nav-top a:hover { color: #fff;}
 .nav-top .nav-topLeft { 
@@ -49,16 +44,12 @@
     margin-left: 12px;
 }
 
-/*内容导航*/
+//网站导航
 .navbar-main {
     width: 100%;
     height: 74px;
+    margin-bottom: 0;
     background: #ffe100;
-}
-.navbar-container { 
-    max-width: 1140px;
-    height: 74px;
-    margin: 0 auto;
 }
 .navbar { border: 0;}
 .navbar-right { margin-right: 0;}
@@ -67,8 +58,7 @@
     padding: 12px 0;
 }
 .logo img {
-    width: 157px;
-    height: 50px;
+    width: 130px;
 }
 .navleft-list {
     float: left;
@@ -87,10 +77,7 @@
     text-align: center;
     line-height: 34px;
     border-radius: 16px;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    transition: all .3s;
+    @include transition;
 }
 .nav-cur a { background: #fff399!important;}
 .navleft-list li a:hover { background: #fff399;}
@@ -125,10 +112,49 @@
 }
 .navright-list li a .iconfont {
     float: left;
+    width: 36px;
+    height: 36px;
+    background: #ffed66;
     font-size: 20px;
     line-height: 34px;
     margin-right: 10px;
+    text-align: center;
+    line-height: 36px;
+    font-size: 20px;
+    color: $color;
+    @include borderRadius(50%);
+}
+.navright-list li a .iconfont.icon-shangjia1{
+    background: none;
+    font-size: 24px;
 }
 .navright-list li a span { 
     float: left;
 }
+
+
+
+
+
+//手机状态
+.navbar-main { position: relative;}
+.navbar-menu-btn { 
+    padding: 0;
+    margin: 16px 0;
+}
+.navbar-menu-btn .iconfont { font-size: 28px;}
+.navbar-user-btn {
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 16px 0 16px 10px;
+}
+#nav_menu,#user_menu {
+    position: absolute;
+    right: 66px;
+    top: 60px;
+    background: #fff;
+}
+#nav_menu { right: 66px;}
+#user_menu { right: 15px;}
