--- a/css/component/sidebar.css
+++ b/css/component/sidebar.css
@@ -11,11 +11,76 @@
   -ms-border-radius: 4px;
   border-radius: 4px; }
 
+.collect:hover {
+  color: #fff; }
+
 .collected {
   background: #ffe100; }
 
 .uncollect {
   background: #dcdcdc; }
+
+.form-group {
+  margin-bottom: 20px;
+  color: #999; }
+
+.form-control {
+  height: 50px;
+  line-height: 50px;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  transition: all 0.3s; }
+
+.form-control:focus {
+  border: 1px solid #ffe100;
+  box-shadow: none; }
+
+.form-half:after {
+  display: block;
+  clear: both;
+  content: ""; }
+
+.form-half .form-control {
+  float: left;
+  width: 60%; }
+
+.form-half .form-code {
+  float: right;
+  width: 36%;
+  height: 50px;
+  overflow: hidden; }
+
+.form-half .form-resend {
+  float: right;
+  width: 36%;
+  height: 50px;
+  line-height: 38px;
+  text-align: center; }
+
+.sub-btn {
+  width: 100%;
+  height: 52px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 18px;
+  color: #000;
+  background: #ffe100;
+  border: none; }
+
+.checkbox {
+  color: #999; }
+
+.sub-btn:hover {
+  background: rgba(255, 225, 0, 0.8); }
+
+.form-protocol {
+  color: #ffe100; }
 
 .sidebar {
   position: fixed;
