--- a/sass/index.scss
+++ b/sass/index.scss
@@ -141,6 +141,12 @@
     padding-bottom: 9px;
     margin-top: 30px;
 }
+.timebar.timebar_fixed {
+    position: fixed;
+    top: -30px;
+    left: 50%;
+    z-index: 20;
+}
 .timebar ul {
     position: absolute;
     top: 0;
